# husky_manipulation

./: .gitmodules  kinova.rosinstall  robotiq.rosinstall  ur.rosinstall
docs/: README.md  robotiq_ur.md
husky_bringup/: CMakeLists.txt  package.xml
husky_bringup/launch/: husky_dual_ur_bringup.launch  husky_ur_bringup.launch
husky_dual_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_dual_gen3_moveit_config/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_dual_gen3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_dual_gen3_moveit_planning_execution.launch  husky_moveit_controller_manager.launch.xml  (+11 more)
husky_dual_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_dual_ur_robotiq_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_franka_bringup/: CMakeLists.txt  package.xml
husky_franka_bringup/launch/: franka_control.launch
husky_franka_description/: CMakeLists.txt  package.xml
husky_franka_description/scripts/: setup_husky_franka_envvar  setup_husky_panda_envar  setup_husky_panda_hand_envar
husky_franka_description/urdf/: husky_franka_description.urdf.xacro  husky_panda_description.urdf.xacro  husky_panda_hand_description.urdf.xacro
husky_franka_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
husky_gen3_lite_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_gen3_lite_moveit_config/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_gen3_lite_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_gen3_lite_moveit_planning_execution.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_gen3_lite_moveit_config/scripts/: customize_moveit.sh
husky_gen3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_gen3_moveit_config/config/: fake_controllers.yaml  husky.srdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
husky_gen3_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  husky_gen3_moveit_planning_execution.launch  husky_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
husky_gen3_moveit_config/scripts/: customize_moveit.sh
husky_gen3_robotiq_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_kinova_bringup/: CMakeLists.txt  package.xml
husky_kinova_bringup/launch/: husky_dual_gen3_bringup.launch  husky_gen3_bringup.launch  husky_gen3_lite_bringup.launch  husky_kinova_bringup.launch  kinova_robot.launch
husky_kinova_description/: CMakeLists.txt  package.xml
husky_kinova_description/scripts/: setup_husky_dual_gen3_envar  setup_husky_dual_gen3_robotiq_2f_140_envar  setup_husky_dual_gen3_robotiq_2f_85_envar  setup_husky_gen3_envar  setup_husky_gen3_lite_envar  setup_husky_gen3_robotiq_2f_140_envar  setup_husky_gen3_robotiq_2f_85_envar  setup_husky_j2n6s200_envar  setup_husky_j2n6s300_envar  setup_husky_j2n7s300_envar  setup_husky_j2s6s300_envar  setup_husky_j2s7s300_envar
husky_kinova_description/urdf/: husky_dual_gen3_description.urdf.xacro  husky_dual_gen3_robotiq_2f_140_description.urdf.xacro  husky_dual_gen3_robotiq_2f_85_description.urdf.xacro  husky_gen3_description.urdf.xacro  husky_gen3_lite_description.urdf.xacro  husky_gen3_robotiq_2f_140_description.urdf.xacro  husky_gen3_robotiq_2f_85_description.urdf.xacro  husky_j2n6s200_description.urdf.xacro  husky_j2n6s300_description.urdf.xacro  husky_j2n7s300_description.urdf.xacro  husky_j2s6s300_description.urdf.xacro  husky_j2s7s300_description.urdf.xacro  husky_kinova_description.urdf.xacro
husky_manipulation/: CMakeLists.txt  package.xml
husky_ur_bringup/: CMakeLists.txt  package.xml
husky_ur_bringup/config/: default_config.yaml  left_ur_controllers.yaml  right_ur_controllers.yaml  ur_controllers.yaml
husky_ur_bringup/launch/: husky_dual_ur_bringup.launch  husky_dual_ur_modern_bringup.launch  husky_dual_ur_official_bringup.launch  husky_ur_bringup.launch  husky_ur_official_bringup.launch  ur_common.launch
husky_ur_bringup/scripts/: arm_reset.py
husky_ur_description/: CMakeLists.txt  package.xml
husky_ur_description/meshes/: ur_plate.dae  ur_plate_collision.stl
husky_ur_description/scripts/: husky_ur5_envar.sh  setup_husky_dual_ur3_e_envar  setup_husky_dual_ur3_envar  setup_husky_dual_ur5_e_envar  setup_husky_dual_ur5_envar  setup_husky_ur3_e_envar  setup_husky_ur3_envar  setup_husky_ur5_e_envar  setup_husky_ur5_envar  setup_husky_ur_envar
husky_ur_description/urdf/: husky_dual_ur3_description.urdf.xacro  husky_dual_ur3_e_description.urdf.xacro  husky_dual_ur5_description.urdf.xacro  husky_dual_ur5_e_description.urdf.xacro  husky_ur3_description.urdf.xacro  husky_ur3_e_description.urdf.xacro  husky_ur5_description.urdf.xacro  husky_ur5_e_description.urdf.xacro
husky_ur_description/urdf/inc/: ur_robotiq_2f_gripper.urdf.xacro
husky_ur_gazebo/: CMakeLists.txt  package.xml
husky_ur_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
husky_ur_robotiq_2f_85_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+150 files in other folders)
