<?xml version="1.0"?>
<package format="2">
  <name>husky_franka_bringup</name>
  <version>0.0.0</version>
  <description>The husky_franka_bringup package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>franka_control</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
  </export>
</package>
