<?xml version="1.0"?>
<package format="2">
  <name>husky_ur_bringup</name>
  <version>0.0.0</version>
  <description>The husky_ur_bringup package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf2_ros</depend>
  <depend>ur_modern_driver</depend>

  <test_depend>roslaunch</test_depend>
</package>
